# mameTask-pico

./: README.md
.github/: release-drafter.yml
.github/workflows/: ci.yml  release.yml
example/: README.md
example/blink_and_print/: CMakeLists.txt  README.md  main.cpp
src/: mameTaskPico.hpp
test/: CMakeLists.txt  README.md  pico_sdk_import.cmake  platform.h  test_device.cpp  test_main.cpp  test_runner.cpp  test_task.cpp  utest.h
test/mock/pico/: async_context_poll.h
